# spotify-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: mcp_server.py
spotify_mcp/: __init__.py  cli.py  client.py  device_resolver.py  models.py  server.py  types.py
