[project]
name = "spotify-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.3",
    "openai-agents>=0.6.7",
    "python-dotenv>=1.2.1",
    "spotipy>=2.25.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-mock>=3.14.1,<4",
    "pytest-cov>=6.2.1,<7",
    "isort>=6.0.1,<7",
    "ruff>=0.13.1",
    "pre-commit>=4.3.0",
]

[project.scripts]
spotify-mcp = "spotify_mcp.cli:main"

[tool.uv]
package = true
